--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,13 @@
 {
-  "name": "Python + Kafka Devcontainer",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "dev",  // must match the service name used for your dev environment
-  "workspaceFolder": "/workspace",
+  "name": "Redpanda Kafka Teaching Env",
+  "image": "mcr.microsoft.com/devcontainers/python:3.10",
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-python.python",
-        "ms-toolsai.jupyter",
-        "ms-azuretools.vscode-docker",
-        "ms-azuretools.vscode-containers"
+        "ms-toolsai.jupyter"
       ]
-    },
-    "settings": {
-      "terminal.integrated.shell.linux": "/bin/bash"
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt",
-  "remoteUser": "vscode"
+  "postCreateCommand": "pip install -r requirements.txt"
 }
